<?xml version="1.0"?>
<package format="2">
  <name>iiwas_rqt</name>
  <version>1.0.0</version>
  <description>The iiwas_rqt package</description>

  <maintainer email="davide@robot-learning.de">Davide Tateo</maintainer>

  <license>MIT</license>


  <url type="website">http://wiki.ros.org/iiwas_rqt</url>


  <author email="davide@robot-learning.de">Davide Tateo</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rqt_gui</build_export_depend>
  <build_export_depend>rqt_gui_py</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>
  <exec_depend>iiwas_srv</exec_depend>
  <exec_depend>urdfdom_py</exec_depend>


  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
